# deepgram-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/routers/: audit.py  health.py  keyterm.py  keyword.py  transcribe.py  webhook.py
app/templates/: audit.html  index.html
app/utils/: __init__.py  deepgram_client.py  deepgram_parser.py  google_cloud_storage_client.py  keyterm_manager.py  keyword_manager.py  storage_client.py  wer_calculator.py
