[project]
name = "deepgram-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jiwer>=3.0.3",
    "deepgram-sdk>=2.12.0",
    "black>=25.1.0",
    "pyyaml>=6.0.2",
    "python-json-logger>=2.0.0",
    "loguru>=0.7.3",
    "google-cloud-storage>=3.2.0",
]
